A bit more renaming detaset->training material.

--- a/ckanext/tess/templates/package/base_form_page.html
+++ b/ckanext/tess/templates/package/base_form_page.html
@@ -7,7 +7,7 @@
       <div class="module-content">
         <p>
           {% trans %}
-          A training material is a training resource (or a link to), such as presentation, video, document, dataset, course, etc.
+          A training material is a link to a training resource (or an actual resource), such as a Web page, text, presentation, video, document, dataset, course, etc.
           together with a description and other meta information.
           {% endtrans %}
         </p>
