Removed the API and documentation block from training material's search page.

--- a/ckanext/tess/templates/package/search.html
+++ b/ckanext/tess/templates/package/search.html
@@ -25,5 +25,7 @@
   </div>
   <a class="close no-text hide-filters"><i class="icon-remove-sign"></i><span class="text">close</span></a>
 </div>
+{% endblock %}
 
+{% block package_search_results_api %}
 {% endblock %}
