--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -161,7 +161,7 @@
                     Menu
                 </h2>
                 <nav>
-                    <ul class="unstyled nav nav-simple nav-facet">
+                    <ul class="unstyled nav nav-simple nav-facet-no-icon">
                         <li class="nav-item">
                             <a href="#about" title="">
                                 <span>About</span>
