--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -3,7 +3,7 @@
         <div class="icon-elixir"></div>{{ _('Nodes') }}
     </h2>
     <nav>
-        <ul class="unstyled nav nav-simple nav-facet">
+        <ul class="unstyled nav nav-simple nav-facet-no-icon">
             <li class="nav-item">
                 <a href="/nodes/hub.html" title="">
                     <span>The Hub</span>
