Work on nodes as a group

--- a/ckanext/tess/templates/node/edit.html
+++ b/ckanext/tess/templates/node/edit.html
@@ -1,4 +1,4 @@
-{% extends "organization/read_base.html" %}
+{% extends "node/read_base.html" %}
 
 {% block subtitle %}{{ _('Activity Stream') }} - {{ super() }}{% endblock %}
 
