--- a/ckanext/tess/templates/node_template.html
+++ b/ckanext/tess/templates/node_template.html
@@ -5,12 +5,14 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 
 {% extends "page.html" %}
 
-{% block subtitle %}{{ node_name }}{% endblock %}
+{% block subtitle %}
+{{ node_name }}
+{% endblock %}
 
 {% block breadcrumb_content %}
-<li>{% link_for _('Nodes'), controller='ckanext.tess.controller:SpecialRouteController', action='nodes' %}</li>
+<li>{% link_for _('Nodes'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
 <!--<li class="active">{% link_for _(node_name), controller='ckanext.tess.controller:SpecialRouteController', action='nodes'  %}</li>-->
-<li class="active"><a href="{{'/nodes/' + country_code + '.html'}}">{{ node_name }}</a></li>
+<li class="active"><a href="">{{ node_name }}</a></li>
 <!--<li class="active">{{ node_name }}</li>-->
 {% endblock %}
 
