Added Israel node to the left hand side navigation.

--- a/ckanext/tess/templates/nodes/snippets/nodes_list.html
+++ b/ckanext/tess/templates/nodes/snippets/nodes_list.html
@@ -50,6 +50,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/nodes/IL.html" title="">
+                    <span>Israel</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/nodes/NO.html" title="">
                     <span>Norway</span>
                 </a>
