--- a/ckanext/tess/public/css/tess.css
+++ b/ckanext/tess/public/css/tess.css
@@ -81,7 +81,11 @@ Text Color #FFAC74
   background-color: #F8761F;
 }
 */
-
+[role=main] .primary {
+    float: right;
+    margin-left: 0;
+    margin-bottom: 10px;
+}
 /* Change the colors of the "Search Your Data" box. */
 .homepage .module-search .module-content {
   color: rgb(68, 68, 68);
