--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -23,8 +23,8 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
                 <p>Find out training-related information for each node.</p>
                 <br>
             </div>
-            <div class="span2" style="padding-top:20px">
-        {% link_for _('Add a Node'), controller='ckanext.tess.controller:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+            <div class="span4" style="padding-top:20px">
+        {% link_for _('Add node'), controller='ckanext.tess.controller:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
     </div>
         </div>
         <div class="row-fluid">
