--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -7,7 +7,7 @@
 
   {% block basic_fields %}
     {% set attrs = {'data-module': 'slug-preview-target'} %}
-    {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create a New Node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
+    {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
 
     {# Perhaps these should be moved into the controller? #}
     {% set prefix = h.url_for(controller='node', action='read', id='') %}
