--- a/ckanext/tess/templates/node/new.html
+++ b/ckanext/tess/templates/node/new.html
@@ -8,6 +8,7 @@
 
 {% block page_header %}{% endblock %}
 
+{{ h.get_all_nodes() }}
 {% block breadcrumb_content_inner %}
   <li class="active"><a href="#">{{ _('Create a Node') }}</a></li>
 {% endblock %}
