--- a/ckanext/tess/templates/node/snippets/helper.html
+++ b/ckanext/tess/templates/node/snippets/helper.html
@@ -6,10 +6,9 @@
   <div class="module-content">
     {% trans %}
       <p>
-          ELIXIR is a pan-European research infrastructure for biological information.
-          It consists of the Hub and a number of ELIXIR nodes. Each participating country have their own node. The only exception is the UK,
-          which has two - with EMBL-EBI being a node on its own. You can add a new node here if your country has signed
-          the declaration to join ELIXIR. Please be very thorough with the information you provide.
+          ELIXIR is a pan-European research infrastructure.
+          It consists of the Hub and a number of ELIXIR nodes. Each participating node has a head of node, a training co-ordinator, and a technical co-ordinator.
+          You can add a new node here if your country has signed the declaration to join ELIXIR. Please be very thorough with the information you provide.
       </p>
     {% endtrans %}
   </div>
