--- a/ckanext/tess/templates/nodes/EMBL-EBI.html
+++ b/ckanext/tess/templates/nodes/EMBL-EBI.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block news %}
-<li style="position: absolute; top: 0px; left: 0px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
+<li style="position: absolute; top: 0px; left: 0px; height:800px; width: 280px; border: 1px solid #DDD;" class="media-item masonry-brick">
     <h2>News</h2>
     <hr/>
     <a class="twitter-timeline" href="https://twitter.com/emblebi" data-widget-id="559760117273747456">Tweets by @emblebi</a>
