--- a/ckanext/tess/templates/node/new_node_form.html
+++ b/ckanext/tess/templates/node/new_node_form.html
@@ -5,12 +5,14 @@ As the form is rendered as a seperate page we take advantage of this by
 overriding the form blocks depending on the current context
 #}
 {% block dataset_fields %}
-  {% if action == "new" %}{{ super() }}{% endif %}
+  {% if action == "edit" %}{{ super() }}{% endif %}
 {% endblock %}
 
-{#% block custom_fields %}
-  {% if action == "new" %}{{ super() }}{% endif %}
-{% endblock %#}
+{% block custom_fields %}
+    {#% if action == "edit" %}
+        {{ super() }}
+    {% endif %#}
+{% endblock %}
 
 {% block save_text %}
   {%- if action == "edit" -%}
