--- a/ckanext/tess/templates/node/read_base.html
+++ b/ckanext/tess/templates/node/read_base.html
@@ -3,23 +3,19 @@
 {% block subtitle %}{{ c.group_dict.display_name }} - {{ _('Node') }}{% endblock %}
 
 {% block breadcrumb_content %}
+{{c.group_dict}}
   <li>{% link_for _('Node'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
   <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='ckanext.tess.controller:NodeController', action='read', id=c.group_dict.name %}</li>
 {% endblock %}
 
 {% block content_action %}
-  {#% if h.check_access('organization_update', {'id': c.group_dict.id}) %#}
-    {% link_for _('Manage'), controller='ckanext.tess.controller:NodeController', action='edit', id=c.group_dict.name, class_='btn', icon='wrench' %}
-  {#% endif %#}
 {% endblock %}
 
 {% block content_primary_nav %}
 {% endblock %}
 
 {% block secondary_content %}
-
 {% endblock %}
 
 {% block links %}
-
 {% endblock %}
