--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -6,6 +6,20 @@
   {% endblock %}
 
   {% block basic_fields %}
+
+    <div class="control-group">
+        <label class="control-label" for="field-country_code">{{ _("Available Country Codes") }}</label>
+        <div class="controls">
+          <select id="field-country_code" name="cc" data-module="autocomplete">
+              {% set country_codes = h.available_countries() %}
+            {% for country_code in country_codes %}
+              <option value="{{ country_code.value }}" {% if country_code.value in data.get('cc', []) %}selected="selected"{% endif %}>{{ country_code.name }}</option>
+            {% endfor %}
+        </select>
+        </div>
+    </div>
+    <img src="/images/node_flags/{{ data.cc }}.png" />
+
     {% set attrs = {'data-module': 'slug-preview-target'} %}
     {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create a New Node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
 
@@ -15,19 +29,17 @@
     {% set domain = domain|replace("http://", "")|replace("https://", "") %}
     {% set attrs = {'data-module': 'slug-preview-slug', 'data-module-prefix': domain, 'data-module-placeholder': '<node-id>'} %}
 
-    {{ form.prepend('name', label=_('URL'), prepend=prefix, id='field-url', placeholder=_('my-node'), value=data.name, error=errors.name, 
-attrs=attrs, is_required=true) }}
+    {{ form.prepend('name', label=_('URL'), prepend=prefix, id='field-url', placeholder=_('my-node'), value=data.name, error=errors.name,
+    attrs=attrs, is_required=true) }}
     {{ form.markdown('description', label=_('Description'), id='field-description', placeholder=_('A little information about the ELIXIR Node...'), value=data.description, error=errors.description) }}
-   {{ data.image_url }}
+    {{ data.image_url }}
 
     {{ form.input('hon', label=_('Head of Node'), id='hon', placeholder=('The Head of this Node'), value=data.hon) }}
     {{ form.input('trc', label=_('Training Coordinator'), id='trc', placeholder=('Name of Training Coordinator'), value=data.trc) }}
     {{ form.input('tec', label=_('Technical Coordinator'), id='tec', placeholder=('Name of Technical Coordinator'), value=data.tec) }}
-    {{ form.input('cc', label=_('Country Code'), id='tec', placeholder=('e.g. GB for Great Britain, CH for Swiss'), value=data.cc) }}
 
     {% set is_upload = data.image_url and not data.image_url.startswith('http') %}
     {% set is_url = data.image_url and data.image_url.startswith('http') %}
-    {{ c.ass }}
     {{ form.image_upload(data, errors, is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }}
 
   {% endblock %}
@@ -83,7 +95,7 @@ attrs=attrs, is_required=true) }}
     {{ form.required_message() }}
   <div class="form-actions">
     {% block delete_button %}
-      {% if h.check_access('node_delete', {'id': data.id})  %}
+      {% if h.check_access('group_delete', {'id': data.id})  %}
         {% set locale = h.dump_json({'content': _('Are you sure you want to delete this Node? This will delete all the public and private datasets belonging to this node.')}) %}
         <a class="btn btn-danger pull-left" href="{% url_for controller='node', action='delete', id=data.id %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
       {% endif %}
