--- a/ckanext/tess/templates/node/snippets/node_item.html
+++ b/ckanext/tess/templates/node/snippets/node_item.html
@@ -20,12 +20,20 @@ Example:
   {% block title %}
     <h3 class="media-heading">{{ node.display_name }}</h3>
   {% endblock %}
-    {% block node_info %}
-    {{ node }}
+  {% block node_info %}
+
+    {% if node.has_key('extras') %}
+        {% for extra in node['extras'] %}
+            {% set key = h.key_to_title(extra['key']) %}
+            {% set val = extra['value'] %}
+            <p><b> {{key}} </b>: {{val}} </p>
+        {% endfor %}
+    {% endif %}
+
     <b>Head of Node:</b> <i>{{node.hon}}</i><br>
     <b>Technical Co-Ordinator</b>: <i>{{node.tec}}</i><br>
     <b>Training Co-Ordinator</b>:<i>{{node.trc}}</i><br>
-    {% endblock %}
+  {% endblock %}
   {% block description %}
     {% if node.description %}
       <p>{{ h.markdown_extract(node.description, extract_length=80) }}</p>
