--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -6,7 +6,7 @@
   {% endblock %}
 
   {% block basic_fields %}
-
+    {% if action == 'new' %}
     <div class="control-group">
         <label class="control-label" for="field-country_code">{{ _("Available Country Codes") }}</label>
         <div class="controls">
@@ -19,10 +19,12 @@
         </div>
     </div>
     <img src="/images/node_flags/{{ data.cc }}.png" />
-
+    {% else %}
+        {{ data.get('cc')}}
+    {% endif %}
     {% set attrs = {'data-module': 'slug-preview-target'} %}
     {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
-
+    {{ action }}
     {# Perhaps these should be moved into the controller? #}
     {% set prefix = h.url_for(controller='node', action='read', id='') %}
     {% set domain = h.url_for(controller='node', action='read', id='', qualified=true) %}
