--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -7,37 +7,22 @@
 
   {% block basic_fields %}
       {% if action == 'new' %}
-    <div class="control-group">
-        <label class="control-label" for="field-country_code">{{ _("Available Country Codes") }}</label>
-        <div class="controls">
-          <select id="field-country_code" name="cc" data-module="autocomplete">
-              {% set country_codes = h.available_countries() %}
-            {% for country_code in country_codes %}
-              <option value="{{ country_code.value }}" {% if country_code.value in data.get('cc', []) %}selected="selected"{% endif %}>{{ country_code.name }}</option>
-            {% endfor %}
-        </select>
-        </div>
-    </div>
-    {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
+        {{ form.select('cc', id='cc', label=_('Select Country Code'), options=h.available_countries(), selected=data.get('cc'), attrs={'data-module':'autocomplete', 'data-module':'load_country_info'})}}
     {% else %}
-        <h2>
-        Country Code: {{ data.get('cc') }}
-            {{ form.hidden('cc', data.get('cc')) }}
-       </h2><h2>
-        Name: {{ data.get('title') }}
-            {{ form.hidden('cc', data.get('title')) }}
-        </h2>
+        <h2>Country Code: {{ data.get('cc') }}{{ form.hidden('cc', data.get('cc')) }}</h2>
+        <h2>Name: {{ data.get('title') }}{{ form.hidden('cc', data.get('title')) }}</h2>
         <img src="/images/node_flags/{{ data.cc }}.png" class="img-circle" style="max-height:60px">
     {% endif %}
-    {% set attrs = {'data-module': 'slug-preview-target'} %}
-    {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
+
     {{ action }}
     {# Perhaps these should be moved into the controller? #}
+    {% set attrs = {'data-module': 'slug-preview-target'} %}
     {% set prefix = h.url_for(controller='node', action='read', id='') %}
     {% set domain = h.url_for(controller='node', action='read', id='', qualified=true) %}
     {% set domain = domain|replace("http://", "")|replace("https://", "") %}
     {% set attrs = {'data-module': 'slug-preview-slug', 'data-module-prefix': domain, 'data-module-placeholder': '<node-id>'} %}
 
+    {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Create node'), value=data.title, error=errors.title, classes=['control-full'], attrs=attrs) }}
     {{ form.prepend('name', label=_('URL'), prepend=prefix, id='field-url', placeholder=_('my-node'), value=data.name, error=errors.name,
     attrs=attrs, is_required=true) }}
     {{ form.markdown('description', label=_('Description'), id='field-description', placeholder=_('A little information about the ELIXIR Node...'), value=data.description, error=errors.description) }}
@@ -105,8 +90,14 @@
   <div class="form-actions">
     {% block delete_button %}
       {% if h.check_access('group_delete', {'id': data.id})  %}
-        {% set locale = h.dump_json({'content': _('Are you sure you want to delete this Node? This will delete all the public and private datasets belonging to this node.')}) %}
-        <a class="btn btn-danger pull-left" href="{% url_for controller='node', action='delete', id=data.id %}" data-module="confirm-action" data-module-i18n="{{ locale }}">{% block delete_button_text %}{{ _('Delete') }}{% endblock %}</a>
+        {% set locale = h.dump_json({'content': _('Are you sure you want to delete this Node?')}) %}
+        <a class="btn btn-danger pull-left"
+           href="{% url_for controller='ckanext.tess.controller:NodeController', action='delete', id=data.id %}"
+           data-module="confirm-action"
+           data-module-i18n="{{ locale }}">
+            {% block delete_button_text %}
+            {{ _('Delete') }}
+            {% endblock %}</a>
       {% endif %}
     {% endblock %}
     <button class="btn btn-primary" name="save" type="submit">{% block save_text %}{{ _('Save Node') }}{% endblock %}</button>
