Small workind fix for breadcrumbs.

--- a/ckanext/tess/templates/node/new.html
+++ b/ckanext/tess/templates/node/new.html
@@ -2,7 +2,7 @@
 
 {% block subtitle %}{{ _('Create node') }}{% endblock %}
 
-{% block breadcrumb_link %}{{ h.nav_link(_('Create a Node'), controller='node', action='edit', id=c.organization.name) }}{% endblock %}
+{% block breadcrumb_link %}{{ h.nav_link(_('Create node'), controller='node', action='edit', id=c.organization.name) }}{% endblock %}
 
 {% block page_heading %}{{ _('Create node') }}{% endblock %}
 
