--- a/ckanext/tess/templates/node/index.html
+++ b/ckanext/tess/templates/node/index.html
@@ -3,7 +3,7 @@
 {% block subtitle %}{{ _('Content providers') }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li class="active">{% link_for _('Node'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
+  <li class="active">{% link_for _('Nodes'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
 {% endblock %}
 
 {% block page_header %}{% endblock %}
