--- a/ckanext/tess/templates/node/read_base.html
+++ b/ckanext/tess/templates/node/read_base.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumb_content %}
 {{c.group_dict}}
-  <li>{% link_for _('Node'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
+  <li>{% link_for _('Nodes'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
   <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='ckanext.tess.controller:NodeController', action='read', id=c.group_dict.name %}</li>
 {% endblock %}
 
