--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -28,17 +28,17 @@
             </select>
         </div>
     </div>
-        {{ form.input('display_name', label=_('Display Name'), id='display_name', value=data.get('display_name')) }}
-        {{ form.input('name', label=_('Slug'), id='name', value=data.get('name')) }}
-        {{ form.input('title', label=_('Title'), id='title', value=data.get('title')) }}
+        {{ form.input('display_name', label=_('Display Name'), id='display_name',  classes=['disabled'], value=data.get('display_name')) }}
+        {{ form.input('name', label=_('Slug'), id='name', value=data.get('name'), classes=['disabled']) }}
+        {{ form.input('title', label=_('Title'), id='title', classes=['disabled'], value=data.get('title')) }}
     <img id="flag" src="" class="img-circle" style="max-height:100px; float:right; position:relative; margin-bottom: 100px">
   {% else %}
         <!--<h2>Country code: {{ data.get('cc') }}{{ form.hidden('cc', data.get('cc')) }}</h2>-->
         <h2>ELIXIR node: {{ data.get('title') }}</h2>
         <img id="flag" src="/images/node_flags/{{ data.cc }}.png" class="img-circle" style="max-height:60px">
-        {{ form.input('display_name', label=_('Display Name'), id='display_name', value=data.get('display_name')) }}
-        {{ form.input('name', label=_('Slug'), id='name', value=data.get('name')) }}
-        {{ form.input('title', label=_('Title'), id='title', value=data.get('title')) }}
+        {{ form.input('display_name', label=_('Display Name'), id='display_name', value=data.get('display_name'), attrs={'disabled':'disabled'}) }}
+        {{ form.input('name', label=_('Slug'), id='name', value=data.get('name'), attrs={'disabled':'disabled'}) }}
+        {{ form.input('title', label=_('Title'), id='title', value=data.get('title'), attrs={'disabled':'disabled'} ) }}
   {% endif %}
 
 <br><br><br><br><br><br><br><br>
